/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 */

syntax = "proto3";

package kritor.event;

option csharp_namespace = "Kritor.Event";
option java_multiple_files = true;
option java_package = "io.kritor.event";
option go_package = "grpc/kritor/event";

import "proto/common/message_data.proto";
import "proto/event/event_notice.proto";
import "proto/event/event_request.proto";

service EventService {
  rpc RegisterActiveListener(RequestPushEvent) returns (stream EventStructure); // 主动RPC推送器
  rpc RegisterPassiveListener(stream EventStructure) returns (RequestPushEvent); // 被动RPC监听器
}

enum EventType {
  EVENT_TYPE_CORE_EVENT = 0;
  EVENT_TYPE_MESSAGE = 1;
  EVENT_TYPE_NOTICE = 2;
  EVENT_TYPE_REQUEST = 3;
}

message RequestPushEvent {
  EventType type = 1;
}

message EventStructure {
  EventType type = 1;
  oneof event {
    kritor.common.PushMessageBody message = 2;
    RequestEvent request = 3;
    NoticeEvent notice = 4;
  }
}